# DesktopApplication

./: CMakeLists.txt  QllamaTalk.qmlproject  README.md  embed_script.py  qmlmodules  read  remove_jp_comments.sh
